<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IEEE-754</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Calculate">Umwandeln</string>
    <string name="Float">Float/Double</string>
    <string name="Coded">Codiert</string>
    <string name="DefaultValue">99.9</string>
    <string name="Pre">Vorzeichen</string>
    <string name="Ch">Charakteristik</string>
    <string name="Man">Mantisse</string>
    <string name="Check">Prüfwert</string>
    <string name="Single">Single (32bit)</string>
    <string name="Double">Double (64bit)</string>
    <string name="Reset">Reset</string>
    <string name="Enter">Welche Dezimalzahl soll umgewandelt werden?</string>
    <string name="Format">In welchem Format soll die Zahl dargestellt werden?</string>
    <string name="Back">Zurück</string>
    <string name="Formatted">In Byte Formatiert:</string>

</resources>
