<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.merz.ieee_754.MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:onClick="Calculate"
        android:text="@string/Calculate" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Single"
            android:textColor="@color/textradio" />

        <RadioButton
            android:id="@+id/radioD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Double"
            android:textColor="@color/textradio" />

    </RadioGroup>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:ems="10"
        android:hint="@string/Float"
        android:inputType="numberDecimal|numberSigned" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/userInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/Enter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup1"
        android:layout_alignLeft="@+id/userInfo1"
        android:layout_marginBottom="38dp"
        android:text="@string/Format"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>